# HTL_Files

./: .gitignore
DBI/4AHIF/: Bank_STP.sql  DBI4UE_Admin2.sql  (+12 more)
POS/C++ 5/Flugplaner/: CHANGELOG_SINGLETON.md  CMakeLists.txt  Flugplaner.sln  IMPLEMENTATION.md  README.md  SINGLETON_PATTERN.md
POS/C++ 5/Flugplaner/Flugplaner/: Databaser.cpp  Databaser.h  Flugplaner.cpp  Flugplaner.h  Flugplaner.qrc  Flugplaner.ui  Flugplaner.vcxproj  Flugplaner.vcxproj.filters  MapWidget.cpp  MapWidget.h  QxOrmConfig.h  QxOrmRegistration.cpp  export.h  main.cpp  resource.h  stdafx.h
POS/C++ 5/Flugplaner/Flugplaner/Models/: Airline.cpp  Airline.h  Airport.cpp  Airport.h  Alliance.cpp  Alliance.h  Route.cpp  Route.h
POS/C++ 5/Flugplaner/Flugplaner/Utilities/: FlyGraph.cpp  FlyGraph.h
POS/C++ 5/Flugplaner/Libraries/QxOrm/: QxOrm.pro
POS/C++ 5/Flugplaner/Libraries/QxOrm/doc/qxorm_en/: download.html  faq.html  link.html
POS/C++ 5/Flugplaner/Libraries/QxOrm/doc/qxorm_fr/: download.html  faq.html  link.html
POS/C++ 5/Flugplaner/Libraries/QxOrm/include/QxDao/: QxSqlDatabase.h
POS/C++ 5/Flugplaner/Libraries/QxOrm/include/QxDataMember/: QxDataMember.h
POS/C++ 5/Flugplaner/Libraries/QxOrm/include/QxRegister/: QxClassX.h
POS/C++ 5/Flugplaner/Libraries/QxOrm/include/QxSerialize/Qt/: QxSerialize_QLinkedList.h  QxSerialize_QMatrix.h  QxSerialize_QRegExp.h  QxSerialize_QScopedPointer.h
POS/C++ 5/Flugplaner/Libraries/QxOrm/include/QxTraits/: get_sql_type.h  is_qt_scoped_ptr.h  is_smart_ptr.h  remove_smart_ptr.h
POS/C++ 5/Flugplaner/Libraries/QxOrm/include/QxXml/: QxXmlWriter.h
POS/C++ 5/Flugplaner/Libraries/QxOrm/inl/QxCollection/: QxCollection.inl
POS/C++ 5/Flugplaner/Libraries/QxOrm/inl/QxDao/: QxDao_DeleteById.inl  QxDao_FetchById.inl  QxDao_Insert.inl  QxDao_Insert_WithRelation.inl  QxDao_Save.inl  QxDao_Update.inl
POS/C++ 5/Flugplaner/Libraries/QxOrm/src/: main.cpp
POS/C++ 5/Flugplaner/Libraries/QxOrm/src/QxCollection/: QxCollection.cpp
POS/C++ 5/Flugplaner/Libraries/QxOrm/src/QxCommon/: QxCache.cpp
POS/C++ 5/Flugplaner/Libraries/QxOrm/src/QxDao/: IxSqlQueryBuilder.cpp  IxSqlRelation.cpp  QxSqlDatabase.cpp  QxSqlQuery.cpp
POS/C++ 5/Flugplaner/Libraries/QxOrm/src/QxDataMember/: IxDataMember.cpp  IxDataMemberX.cpp
POS/C++ 5/Flugplaner/Libraries/QxOrm/src/QxFactory/: IxFactory.cpp  QxFactoryX.cpp
POS/C++ 5/Flugplaner/Libraries/QxOrm/src/QxRegister/: IxClass.cpp  QxClassX.cpp
POS/C++ 5/Flugplaner/Libraries/QxOrm/src/QxSerialize/Qt/: QxSerialize_QBrush.cpp  QxSerialize_QByteArray.cpp  QxSerialize_QColor.cpp  QxSerialize_QDate.cpp  QxSerialize_QDateTime.cpp  QxSerialize_QFont.cpp  QxSerialize_QImage.cpp  QxSerialize_QMatrix.cpp  QxSerialize_QObject.cpp  QxSerialize_QPicture.cpp  QxSerialize_QPixmap.cpp  QxSerialize_QPoint.cpp  QxSerialize_QRect.cpp  QxSerialize_QRegExp.cpp  QxSerialize_QRegion.cpp  QxSerialize_QSize.cpp  QxSerialize_QString.cpp  QxSerialize_QStringList.cpp  QxSerialize_QTime.cpp  QxSerialize_QUrl.cpp  QxSerialize_QVariant.cpp
POS/C++ 5/Flugplaner/Libraries/QxOrm/src/QxSerialize/QxBoostSerializeHelper/: IxBoostSerializeRegisterHelper.cpp  QxBoostSerializeRegisterHelperX.cpp
POS/C++ 5/Flugplaner/Libraries/QxOrm/src/QxSerialize/boost/: QxExportDllBoostArchive.cpp
POS/C++ 5/Flugplaner/Libraries/QxOrm/src/QxSingleton/: IxSingleton.cpp  QxSingletonX.cpp
POS/C++ 5/Flugplaner/Libraries/QxOrm/src/QxTraits/: unit_test_is_container.cpp  unit_test_is_smart_ptr.cpp
POS/C++ 5/Flugplaner/Libraries/QxOrm/src/QxXml/: QxXmlReader.cpp  QxXmlWriter.cpp
POS/C++ 5/Flugplaner/Libraries/QxOrm/test/qxBlog/: qxBlog.pro
POS/C++ 5/Flugplaner/Libraries/QxOrm/test/qxBlog/include/: author.h  blog.h  category.h  comment.h
POS/C++ 5/Flugplaner/Libraries/QxOrm/test/qxBlog/src/: author.cpp  main.cpp
POS/C++ 5/Flugplaner/Libraries/QxOrm/tools/: _build_debug.bat  _build_release.bat  clean_all.bat
POS/C++ 5/Flugplaner/libs/incl/include/: QxDaoRepository.h  QxOrm_Impl.h  QxServices.h
POS/C++ 5/Flugplaner/libs/incl/include/QxCommon/: QxAnyCastDynamic.h  QxException.h  QxExceptionCode.h
POS/C++ 5/Flugplaner/libs/incl/include/QxDao/: IxDao_Helper.h  QxDaoStrategy.h  QxSqlJoin.h  QxSqlRelationLinked.h  QxSqlSaveMode.h
POS/C++ 5/Flugplaner/libs/incl/include/QxDao/QxRepository/: QxRepository.h
POS/C++ 5/Flugplaner/libs/incl/include/QxExtras/: QxBoostOptionalOnly.h  QxStdOptional.h
POS/C++ 5/Flugplaner/libs/incl/include/QxHttpServer/: QxHttpRequest.h  QxHttpSession.h  QxHttpTransaction.h
POS/C++ 5/Flugplaner/libs/incl/include/QxModelView/: QxModelService.h  QxNestedModel.h
POS/C++ 5/Flugplaner/libs/incl/include/QxRegister/: IxTypeInfo.h  QxRegisterInternalHelper.h  QxVersion.h
POS/C++ 5/Flugplaner/libs/incl/include/QxSerialize/: QxSerializeQDataStream.h  QxSerializeQJson.h
POS/C++ 5/Flugplaner/libs/incl/include/QxService/: IxService.h  QxClientAsync.h  QxTransaction.h
POS/C++ 5/Flugplaner/libs/incl/include/QxTraits/: construct_null_qvariant.h  is_qx_dao_ptr.h  is_std_weak_ptr.h
POS/C++ 5/Flugplaner/libs/incl/include/QxValidator/: IxValidator.h  QxValidator.h  QxValidatorError.h  QxValidatorFct.h
POS/C++ 5/Flugplaner/libs/incl/inl/QxDao/: QxDao_ExecuteQuery.inl  QxDao_Update_Optimized.inl
POS/C++ 5/Taschenrechner/: CMakeLists.txt  Taschenrechner.sln
POS/C++ 5/Taschenrechner/Calculator/: Calculator.cpp  Calculator.h  Calculator.vcxproj  Calculator.vcxproj.filters  calculator_global.h  exprtk.hpp
POS/C++ 5/Taschenrechner/MathExpr/: MathExpr.vcxproj  MathExpr.vcxproj.filters  mathexpr.cpp
POS/C++ 5/Taschenrechner/Taschenrechner/: Taschenrechner.cpp  Taschenrechner.h  Taschenrechner.qrc  Taschenrechner.ui  Taschenrechner.vcxproj  Taschenrechner.vcxproj.filters  main.cpp
POS/C++/sokoban/: CMakeLists.txt  dbg.cpp
POS/C++/sokoban/data/: Boxxle1.slc:Zone.Identifier  Boxxle1.slcZone.Identifier  Boxxle2.slc:Zone.Identifier  Boxxle2.slcZone.Identifier  Sokoban.png:Zone.Identifier  Sokoban.pngZone.Identifier
POS/C++/sokoban/include/: block.h  sokoban.h
POS/C++/sokoban/include/SFML/Graphics/: RenderWindow.hpp
POS/C++/sokoban/src/: main.cpp  sokoban.cpp
(+1370 files in other folders)
